[package]
name = "tte"
version = "0.1.1"
authors = ["samma"]
edition = "2018"
license="MIT"
readme="README.md"
repository="https://github.com/pigeonhands/tte"
description="Time to execute. Application benchmark/timer."
keywords = ["benchmark", "timer", "execution"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tte_lib"
path = "src/lib.rs"

[[bin]]
name = "tte"
path = "src/bin.rs"

[dependencies]
getopts = "0.2.21"
rust_decimal = "1.4.1"

